# rust_sandbox

./: .editorconfig  .gitattribute  .rustfmt.toml  Cargo.toml
class01/: Cargo.toml
class01/session1/: Cargo.toml
class01/session1/authentication/: Cargo.toml
class01/session1/login/: users.json
class01/session1/login_manager/: Cargo.toml  users.json
class01/session1/src/: main.rs
class01/session1/variables/: Cargo.toml
class01/session2/: Cargo.toml
class01/session2/src/: main.rs  theme.rs
class01/session3/: .env  Cargo.toml  hello_db.db  hello_db.db-shm  hello_db.db-wal
class01/session3/migrations/: 20250711153319_initial.sql  20250712155404_more_messages.sql
class01/session3/src/: main.rs  theme.rs
class01/session3/src/theme/: blocking.rs  channels.rs  db.rs  errors.rs  file_io.rs  hello_async.rs  hello_tokio.rs  log_span.rs  recursion.rs  rest_client.rs  tcp_server.rs  tokio_select.rs  tokio_testing.rs  web_service.rs
class01/session3/src/theme/web_service/: hello.html
class01/session3/thumbnail_server/: .env  Cargo.toml  images.db
class01/session3/thumbnail_server/html/: index.html  redirect.html  search.html
class01/session3/thumbnail_server/migrations/: 20250714143438_initial.sql
class01/session3/thumbnail_server/src/: main.rs
class01/session4/: Cargo.toml
class01/session4/src/: main.rs  theme.rs
class01/session5/: Cargo.toml
class01/session5/collector/: Cargo.toml  uuid
class01/session5/server/: .env  Cargo.toml  collection.db  collection.db-shm  collection.db-wal
class01/session5/server/html/: collector.html  index.html
class01/session5/server/migrations/: 20250812120454_initial.sql
class01/session5/server/src/: collector.rs  main.rs
class01/session5/shared_data/: Cargo.toml
class01/session5/src/: main.rs
class01/src/: main.rs
class02/: Cargo.toml
class02/adder/: adder.c
class02/bank/src/: lib.rs
class02/bank/tests/: savings_account.rs
class02/procedural_macros/: Cargo.toml
class02/procedural_macros/src/: lib.rs
class02/src/: main.rs
class02/src/bootcamp/: book_struct.rs  closure.rs  command_enum.rs  deref.rs  error_handling.rs  iterator.rs  lifetime.rs  macros.rs  mod.rs  option_result.rs  smart_pointers.rs  threads.rs  traits.rs  unsafe_rust.rs
class03/: Cargo.toml
class03/peep/: Cargo.toml
class03/peep/src/: lib.rs  peep_hook1.rs  peep_hook2.rs  peep_hook3.rs  peep_hook4.rs  peep_poll.rs
class03/src/: main.rs
class03/src/advance_themes/: arc_mutex.rs  arrays_slices.rs  async_functions.rs  channels.rs  custom_error.rs  from_into.rs  generic_functions.rs  generic_structures.rs  iterator.rs  lifetimes.rs  macros.rs  match_guards.rs  misc.rs  mod.rs  new_type_pattern.rs  ordering.rs  smart_pointers.rs  threads.rs  trait_objects.rs  traits.rs  type_state_pattern.rs
class03/src/basic_themes/: crates_modules.rs  if_while_let.rs  iterators.rs  map_combinator.rs  mod.rs  modules.rs  option_combinators.rs  ownership.rs  result.rs  testing.rs  user_input.rs
class03/src/mini_project/: bill_manager.rs  mod.rs
class03/track/: Cargo.toml
class03/track/src/: error.rs  init.rs  lib.rs
class03/track/src/feature/: cli.rs
class03/track/tests/: cli.rs
class04/src/: main.rs
class04/src/challenges/: challenge_1.rs  challenge_10.rs  challenge_2.rs  challenge_3.rs  challenge_4.rs  challenge_5.rs  challenge_6.rs  challenge_7.rs  challenge_8.rs  challenge_9.rs  mod.rs
class05/src/: main.rs
class05/src/chapter/: mod.rs  theme_10.rs  theme_11.rs  theme_12.rs  theme_13.rs  theme_14.rs  theme_16.rs  theme_17.rs  theme_18.rs  theme_19.rs
class06/: Cargo.toml
class06/src/: apps.rs  main.rs
class06/src/apps/: md_to_html.rs  pr_scr.rs  rename_seq.rs  temp_conv.rs  xor_cipher.rs
class07/: Cargo.toml
class07/src/: main.rs  project.rs
class07/src/project/: bank.rs  cards.rs  generics.rs  iter.rs  lifetimes.rs  logs.rs  media.rs  traits.rs
class08/: Cargo.toml
class08/minigrep/: .env  result.txt
class08/minigrep/src/: lib.rs  main.rs
class08/web_server/html/: 404.html  hello.html
class08/web_server/src/: lib.rs  main.rs
class09/: Cargo.toml
class09/src/: lib.rs  main.rs
class09/src/lib/: Errors.rs  application.rs  extractor.rs  getting_started.rs  handlers.rs  server.rs
class10/: Cargo.toml
class10/src/: lib.rs  main.rs  model.rs  web.rs
class10/src/web/: hello.rs  routes_login.rs
class10/tests/: quick_dev.rs
class11/: Cargo.toml
class11/src/: lib.rs
class11/src/codewars/: _001_unique_in_order.rs  _002_persistent_bugger.rs  mod.rs
session_01/authentication/: Cargo.toml
session_01/authentication/src/: lib.rs
session_01/login/: users.json
session_01/login/src/: main.rs
session_01/src/: main.rs  themes.rs
session_01/src/themes/: variables.rs
session_02/: Cargo.toml
session_02/src/: main.rs
session_03/: Cargo.toml
session_03/src/: main.rs
session_03/src/advance_themes/: channels.rs  custom_error.rs  from_into.rs  generic_functions.rs  generic_structures.rs  match_guards.rs  misc.rs  mod.rs  ordering.rs  smart_pointers.rs  traits.rs  type_state_pattern.rs
session_03/src/basic_themes/: crates_modules.rs  iterators.rs  mod.rs  modules.rs  ownership.rs  testing.rs
session_03/src/mini_project/: bill_manager.rs  mod.rs
session_03/src/themes/: combinator.rs  map_combinator.rs  mod.rs  ownership.rs  result.rs  user_input.rs
session_04/: Cargo.toml
session_05/: Cargo.toml
session_05/src/: main.rs
session_06/: Cargo.toml
session_06/src/: apps.rs  main.rs
session_07/: Cargo.toml
session_07/src/: main.rs  project.rs
src/: main.rs
(+75 files in other folders)
