[package]
name = "rust_sandbox"
version = "0.1.0"
edition = "2024"
description = "First attempts in rust"
license = "MIT"

[dependencies]

[workspace]

members = [
	"session_01/variables",
	"session_01/authentication",
	"session_01/login",
	"session_01/login_manager",
	"session_02",
	"session_02/bank",
	"session_02/procedural_macros",
	"session_03",
	"session_04",
	"session_05",
	"session_06"]
