[package]
name = "rust_sandbox"
version = "0.1.0"
edition = "2024"
description = "First attempts in rust"
license = "MIT"

[dependencies]

[workspace]

members = [
	"class01",
	"class01/session1",
	"class01/session1/variables",
	"class01/session1/authentication",
	"class01/session1/login",
	"class01/session1/login_manager",
	"class01/session2",
	"class01/session3",
	"class01/session3/thumbnail_server",
	"class01/session4",
	"class02",
	"class02/bank",
	"class02/procedural_macros",
	"class03",
	"class04",
	"class05",
	"class06",
	"class07", ]
