[package]
name = "rust_sandbox"
version = "0.1.0"
edition = "2024"
description = "First attempts in rust"
license = "MIT"

[dependencies]

[workspace]

members = [
	"class01",
	"class01/session1",
	"class01/session1/variables",
	"class01/session1/authentication",
	"class01/session1/login",
	"class01/session1/login_manager",
	"class01/session2",
	"class01/session3",
	"class01/session3/thumbnail_server",
	"class01/session4",
	"class01/session5",
	"class01/session5/shared_data",
	"class01/session5/collector",
	"class01/session5/server",
	"class02",
	"class02/bank",
	"class02/procedural_macros",
	"class03",
	"class04",
	"class05",
	"class06",
	"class07",
	"class08",
	"class08/minigrep",
	"class08/web_server",
]
