[package]
name = "class09"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = { version = "4", features = [] }
tokio = "1.46"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0"
log = "0.4.27"
futures = "0.3"
actix-files = "0.6.6"
derive_more = "2.0"
http = "1.3"
env_logger = "0.11"
