[package]
name = "class10"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.47", features = ["full"] }
axum = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower-http = { version = "0.6", features = ["fs"] }
anyhow = "1.0"
thiserror = "2.0"
derive_more = { version = "2.0", features = ["display"] }

[dev-dependencies]
httpc-test = "0.1"
