[package]
name = "session_03"
version = "0.1.0"
edition = "2024"

[lib]
name = "basic_themes"
path = "src/basic_themes/mod.rs"

[dependencies]
humantime = "*"
chrono = "*"
thiserror = "*"
rand = "*"
crossbeam-channel = "*"
colored = "*"
parking_lot = "*"
backoff = "*"
serde = { version = "*", features = ["derive"]}
serde_json = "*"