[package]
name = "session3"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
async-recursion = "1.1.1"
futures = "0.3.31"
reqwest = { version = "0.12.22", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
tokio = { version = "1.46.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["time"] }
time = { version = "0.3.41", features = ["formatting", "macros"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio-native-tls", "sqlite", "macros", "migrate"] }
dotenv = "0.15.0"
