[package]
name = "peep"
version = "0.1.0"
edition = "2024"

[dependencies]
windows-result = "0.3.4"

[dependencies.windows]
version = "0.61"
features = [
	"Win32",
	"Win32_System",
	"Win32_System_Diagnostics",
	"Win32_System_Diagnostics_ToolHelp",
	"Win32_System_Threading",
	"Win32_System_ProcessStatus",
	"Win32_UI",
	"Win32_UI_Accessibility",
	"Win32_UI_WindowsAndMessaging",
]
