[package]
name = "track"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"
clap = { version = "4.5", features = ["env", "derive"] }
clap-verbosity-flag = "3.0"
dirs = "6.0"
error-stack = "0.5"
owo-colors = "4.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tracing = "0.1"
tracing-error = "0.2"
tracing-log = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.18.0", features = ["serde", "v4"] }

[dev-dependencies]
assert_cmd = { version = "2.0", features = ["color-auto"] }
assert_fs = { version = "1.1.3", features = ["color-auto"] }
pretty_assertions = "1.4"
testresult = "0.4"
