[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
tokio = { version = "1", features = ["full"] }
shared_data = { path = "../shared_data" }
sqlx = { version = "0.8" ,features = ["runtime-tokio-native-tls", "sqlite"] }
uuid = "1.18"
dotenv = "0.15"
axum = "0.8"
futures = "0.3"
serde = {  version = "1.0", features = ["derive"] }
